--- a/DSA assignment.ipynb
+++ b/DSA assignment.ipynb
@@ -58,11 +58,11 @@
     "    {'id': 'DBU1500001', 'name': 'Dawit', 'dept': 'DS', 'cgpa': 3.34},\n",
     "    {'id': 'DBU1500005', 'name': 'Abrham', 'dept': 'CS', 'cgpa': 3.12},\n",
     "    {'id': 'DBU1500003', 'name': 'Soliana', 'dept': 'DS', 'cgpa': 2.74},\n",
-    "    {'id': 'DBU1500002', 'name': 'Rahel', 'dept': 'CS', 'cgpa': 3.10},\n",
-    "    {'id': 'DBU1500009', 'name': 'Biruk', 'dept': 'SE', 'cgpa': 2.90},\n",
-    "    {'id': 'DBU1500007', 'name': 'Nardos', 'dept': 'IT', 'cgpa': 3.67},\n",
-    "    {'id': 'DBU1500006', 'name': 'Yonatan', 'dept': 'CS', 'cgpa': 2.59},\n",
-    "    {'id': 'DBU1500008', 'name': 'Lidiya', 'dept': 'DS', 'cgpa': 3.45},\n",
+    "    {'id': 'DBU1500002', 'name': 'Rosa', 'dept': 'CS', 'cgpa': 3.10},\n",
+    "    {'id': 'DBU1500009', 'name': 'Petros', 'dept': 'SE', 'cgpa': 2.90},\n",
+    "    {'id': 'DBU1500007', 'name': 'Yosef', 'dept': 'IT', 'cgpa': 3.67},\n",
+    "    {'id': 'DBU1500006', 'name': 'Birhanu', 'dept': 'CS', 'cgpa': 2.59},\n",
+    "    {'id': 'DBU1500008', 'name': 'Makbel', 'dept': 'CS', 'cgpa': 3.96},\n",
     "    {'id': 'DBU1500010', 'name': 'Kalkidan', 'dept': 'SE', 'cgpa': 3.80},\n",
     "    {'id': 'DBU1500004', 'name': 'Nahom', 'dept': 'CS', 'cgpa': 3.00}\n",
     "]\n",
@@ -101,15 +101,15 @@
     "\n",
     "### 🔹 Step-by-Step Process\n",
     "\n",
-    "- **Step 1**. Start from the second element (index 1) because a single element (index 0) is already considered sorted.   \n",
+    "- **Step 1**. Start from the second element (index 1) because a single element (index 0) is already considered sorted.     \n",
     "\n",
-    "- **Step 2**. Pick the current element (`key`) and compare it with elements in the sorted part of the list (left side).\n",
+    "    - **Step 2**. Pick the current element (`key`) and compare it with elements in the sorted part of the list (left side).\n",
     "\n",
-    "- **Step 3**. **Shift all elements that are **greater than the key** to the right to make space for inserting the key.\n",
+    "    - **Step 3**. **Shift all elements that are **greater than the key** to the right to make space for inserting the key.\n",
     "\n",
-    "- **Step 4**. **Insert the key at its correct position in the sorted section.\n",
+    "    - **Step 4**. **Insert the key at its correct position in the sorted section.\n",
     "\n",
-    "- **Step 5**. Repeat steps 2–4 until the whole list is sorted.\n",
+    "    - **Step 5**. Repeat steps 2–4 until the whole list is sorted.\n",
     "\n",
     "\n",
     "\n",
@@ -118,20 +118,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7ec2a67e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Sorted by Name (Insertion Sort):\n",
+      "{'id': 'DBU1500005', 'name': 'Abrham', 'dept': 'CS', 'cgpa': 3.12}\n",
+      "{'id': 'DBU1500006', 'name': 'Birhanu', 'dept': 'CS', 'cgpa': 2.59}\n",
+      "{'id': 'DBU1500001', 'name': 'Dawit', 'dept': 'DS', 'cgpa': 3.34}\n",
+      "{'id': 'DBU1500010', 'name': 'Kalkidan', 'dept': 'SE', 'cgpa': 3.8}\n",
+      "{'id': 'DBU1500008', 'name': 'Makbel', 'dept': 'CS', 'cgpa': 3.96}\n",
+      "{'id': 'DBU1500004', 'name': 'Nahom', 'dept': 'CS', 'cgpa': 3.0}\n",
+      "{'id': 'DBU1500009', 'name': 'Petros', 'dept': 'SE', 'cgpa': 2.9}\n",
+      "{'id': 'DBU1500002', 'name': 'Rosa', 'dept': 'CS', 'cgpa': 3.1}\n",
+      "{'id': 'DBU1500003', 'name': 'Soliana', 'dept': 'DS', 'cgpa': 2.74}\n",
+      "{'id': 'DBU1500007', 'name': 'Yosef', 'dept': 'IT', 'cgpa': 3.67}\n"
+     ]
+    }
+   ],
    "source": [
     "Students = [\n",
     "    {'id': 'DBU1500001', 'name': 'Dawit', 'dept': 'DS', 'cgpa': 3.34},\n",
     "    {'id': 'DBU1500005', 'name': 'Abrham', 'dept': 'CS', 'cgpa': 3.12},\n",
     "    {'id': 'DBU1500003', 'name': 'Soliana', 'dept': 'DS', 'cgpa': 2.74},\n",
-    "    {'id': 'DBU1500002', 'name': 'Rahel', 'dept': 'CS', 'cgpa': 3.10},\n",
-    "    {'id': 'DBU1500009', 'name': 'Biruk', 'dept': 'SE', 'cgpa': 2.90},\n",
-    "    {'id': 'DBU1500007', 'name': 'Nardos', 'dept': 'IT', 'cgpa': 3.67},\n",
-    "    {'id': 'DBU1500006', 'name': 'Yonatan', 'dept': 'CS', 'cgpa': 2.59},\n",
-    "    {'id': 'DBU1500008', 'name': 'Lidiya', 'dept': 'DS', 'cgpa': 3.45},\n",
+    "    {'id': 'DBU1500002', 'name': 'Rosa', 'dept': 'CS', 'cgpa': 3.10},\n",
+    "    {'id': 'DBU1500009', 'name': 'Petros', 'dept': 'SE', 'cgpa': 2.90},\n",
+    "    {'id': 'DBU1500007', 'name': 'Yosef', 'dept': 'IT', 'cgpa': 3.67},\n",
+    "    {'id': 'DBU1500006', 'name': 'Birhanu', 'dept': 'CS', 'cgpa': 2.59},\n",
+    "    {'id': 'DBU1500008', 'name': 'Makbel', 'dept': 'CS', 'cgpa': 3.96},\n",
     "    {'id': 'DBU1500010', 'name': 'Kalkidan', 'dept': 'SE', 'cgpa': 3.80},\n",
     "    {'id': 'DBU1500004', 'name': 'Nahom', 'dept': 'CS', 'cgpa': 3.00}\n",
     "]\n",
@@ -171,31 +190,52 @@
     "- Sort the list of students by CGPA in descending order using the Selection Sort algorithm.\n",
     "\n",
     "➡️ **Implementation Steps**:<br>\n",
-    " - Step 1: Start with the unsorted list of students.<br>  \n",
+    "  - Step 1: Start with the unsorted list of students.<br>  \n",
     "\n",
-    " - Step 2: For each position i in the list (from 0 to n-1): Assume the current position i holds the student with the highest CGPA in the remaining list. Compare it with the rest of the list (from i+1 to end). and also If any student has a higher CGPA, update the max_idx to that student's index.<br>\n",
+    "  - Step 2: For each position i in the list (from 0 to n-1): Assume the current position i holds the student with the highest CGPA in the remaining list. Compare it with the rest of the list (from i+1 to end). and also If any student has a higher CGPA, update the max_idx to that student's index.<br>\n",
     "\n",
-    " - Step 3: Swap the student at i with the student at max_idx.<br> This places the highest CGPA student in the correct position.<br> \n",
+    "  - Step 3: Swap the student at i with the student at max_idx.<br> This places the highest CGPA student in the correct position.<br> \n",
     "\n",
-    " - Step 4: Repeat until the whole list is sorted in descending CGPA order.<br>"
+    "  - Step 4: Repeat until the whole list is sorted in descending CGPA order.<br>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "15f7b094",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Sorted by CGPA Descending (Selection Sort):\n",
+      "[\n",
+      "   {'id': 'DBU1500008', 'name': 'Makble', 'dept': 'CS', 'cgpa': 3.96},\n",
+      "   {'id': 'DBU1500001', 'name': 'Dawit', 'dept': 'DS', 'cgpa': 3.92},\n",
+      "   {'id': 'DBU1500010', 'name': 'Kalkidan', 'dept': 'SE', 'cgpa': 3.8},\n",
+      "   {'id': 'DBU1500007', 'name': 'Yosef', 'dept': 'IT', 'cgpa': 3.67},\n",
+      "   {'id': 'DBU1500005', 'name': 'Abrham', 'dept': 'CS', 'cgpa': 3.12},\n",
+      "   {'id': 'DBU1500002', 'name': 'Rosa', 'dept': 'CS', 'cgpa': 3.1},\n",
+      "   {'id': 'DBU1500004', 'name': 'Nahom', 'dept': 'CS', 'cgpa': 3.0},\n",
+      "   {'id': 'DBU1500009', 'name': 'Petros', 'dept': 'SE', 'cgpa': 2.9},\n",
+      "   {'id': 'DBU1500003', 'name': 'Soliana', 'dept': 'DS', 'cgpa': 2.74},\n",
+      "   {'id': 'DBU1500006', 'name': 'Birhanu', 'dept': 'CS', 'cgpa': 2.59},\n",
+      "]\n"
+     ]
+    }
+   ],
    "source": [
     "Students = [\n",
-    "    {'id': 'DBU1500001', 'name': 'Dawit', 'dept': 'DS', 'cgpa': 3.34},\n",
+    "    {'id': 'DBU1500001', 'name': 'Dawit', 'dept': 'DS', 'cgpa': 3.92},\n",
     "    {'id': 'DBU1500005', 'name': 'Abrham', 'dept': 'CS', 'cgpa': 3.12},\n",
     "    {'id': 'DBU1500003', 'name': 'Soliana', 'dept': 'DS', 'cgpa': 2.74},\n",
-    "    {'id': 'DBU1500002', 'name': 'Rahel', 'dept': 'CS', 'cgpa': 3.10},\n",
-    "    {'id': 'DBU1500009', 'name': 'Biruk', 'dept': 'SE', 'cgpa': 2.90},\n",
-    "    {'id': 'DBU1500007', 'name': 'Nardos', 'dept': 'IT', 'cgpa': 3.67},\n",
-    "    {'id': 'DBU1500006', 'name': 'Yonatan', 'dept': 'CS', 'cgpa': 2.59},\n",
-    "    {'id': 'DBU1500008', 'name': 'Lidiya', 'dept': 'DS', 'cgpa': 3.45},\n",
+    "    {'id': 'DBU1500002', 'name': 'Rosa', 'dept': 'CS', 'cgpa': 3.10},\n",
+    "    {'id': 'DBU1500009', 'name': 'Petros', 'dept': 'SE', 'cgpa': 2.90},\n",
+    "    {'id': 'DBU1500007', 'name': 'Yosef', 'dept': 'IT', 'cgpa': 3.67},\n",
+    "    {'id': 'DBU1500006', 'name': 'Birhanu', 'dept': 'CS', 'cgpa': 2.59},\n",
+    "    {'id': 'DBU1500008', 'name': 'Makble', 'dept': 'CS', 'cgpa': 3.96},\n",
     "    {'id': 'DBU1500010', 'name': 'Kalkidan', 'dept': 'SE', 'cgpa': 3.80},\n",
     "    {'id': 'DBU1500004', 'name': 'Nahom', 'dept': 'CS', 'cgpa': 3.00}\n",
     "]\n",
@@ -213,8 +253,8 @@
     "\n",
     "print(\"\\nSorted by CGPA Descending (Selection Sort):\")\n",
     "print(\"[\")\n",
-    "for s in sorted_by_cgpa:\n",
-    "    print(f\"    {s},\")\n",
+    "for i in sorted_by_cgpa:\n",
+    "    print(f\"   {i},\")\n",
     "print(\"]\")\n"
    ]
   },
@@ -251,14 +291,14 @@
     "- **Use Case**: Best for very small lists or for learning purposes.\n",
     "- **Stable & Adaptive**<br>\n",
     "\n",
-    "**Advantages**:  \n",
-    "- Simple and easy to implement. \n",
-    "- Stable sorting (keeps relative order of equal elements). \n",
-    "- Adaptive — performs well when list is nearly sorted.\n",
+    "  **Advantages**:  \n",
+    "  - Simple and easy to implement. \n",
+    "  - Stable sorting (keeps relative order of equal elements). \n",
+    "  - Adaptive — performs well when list is nearly sorted.     \n",
     "\n",
-    "**Disadvantages**:\n",
-    "- Very inefficient for large datasets.\n",
-    "- Many unnecessary swaps slow it down.\n",
+    "  **Disadvantages**:\n",
+    "  - Very inefficient for large datasets.\n",
+    "  - Many unnecessary swaps slow it down.  \n",
     "\n",
     "---\n",
     "\n",
@@ -269,15 +309,15 @@
     "- **Use Case**: Great for small datasets or when the data is nearly sorted.\n",
     "- **Stable & Adaptive**\n",
     "\n",
-    "**Advantages**:\n",
-    "- Efficient for small or nearly sorted datasets.\n",
-    "- Stable sorting algorithm.\n",
-    "- Adaptive — fewer comparisons when data is mostly sorted.\n",
-    "- Good for real-time data processing.\n",
+    "  **Advantages**:  \n",
+    "  - Efficient for small or nearly sorted datasets.\n",
+    "  - Stable sorting algorithm.\n",
+    "  - Adaptive — fewer comparisons when data is mostly sorted.\n",
+    "  - Good for real-time data processing.  \n",
     "\n",
-    "**Disadvantages**:\n",
-    "- Inefficient for large unsorted data.\n",
-    "- Still O(n²) for average and worst cases.\n",
+    "  **Disadvantages**:\n",
+    "  - Inefficient for large unsorted data.\n",
+    "  - Still O(n²) for average and worst cases.   \n",
     "\n",
     "---\n",
     "\n",
